--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a-scene mindar-image="imageTargetSrc: ./targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
     
         <a-assets>
-           <a-asset-item id="EPCS_Anim" src="Models/EPCS_Anim.glb"></a-asset-item>
+           <video id="VideoEN" autoplay="false" loop="true" src="./assets/video.mp4"></video>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
