--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <a-scene mindar-image="imageTargetSrc: ./targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
     
         <a-assets>
-           <video id="VideoEN" autoplay="true" loop="false" src="assets/Video_CV_English.mp4"></video>
+           <video id="VideoEN" autoplay loop="false" src="assets/Video_CV_English.mp4"></video>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0">
 
-            <a-video id="VideoEN" webkit-playsinline playsinline width="1" height="1" position="0 0 0"></a-video>
+            <a-video id="VideoEN" width="1" height="1" position="0 0 0"></a-video>
               
         </a-entity>
     </a-scene>
