--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.0.0/dist/mindar-image.prod.js"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.0.0/dist/mindar-image-aframe.prod.js"></script>
@@ -22,7 +23,7 @@
 
         <a-entity mindar-image-target="targetIndex: 0">
 
-            <a-video id="VideoEN" width="1" height="1" position="0 0 0"></a-video>
+            <a-video id="#VideoEN" width="1" height="1" position="0 0 0"></a-video>
               
         </a-entity>
     </a-scene>
