--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <a-entity mindar-image-target="targetIndex: 0">
 
-            <a-video id="#VideoEN" width="1" height="1" position="0 0 0"></a-video>
+            <a-video src="#VideoEN" width="1" height="1" position="0 0 0"></a-video>
               
         </a-entity>
     </a-scene>
