--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a-scene mindar-image="imageTargetSrc: ./targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
     
         <a-assets>
-           <video id="VideoEN" preload="auto" autoplay loop="false" src="assets/Video_CV_English.mp4"></video>
+           <video id="VideoEN" preload="auto" autoplay="true" loop="false" src="assets/Video_CV_English.mp4"></video>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
