--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <a-scene mindar-image="imageTargetSrc: ./targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
     
         <a-assets>
-           <video id="VideoEN" preload="auto" autoplay src="assets/Video_CV_English.mp4"></video>
+           <video id="VideoEN" preload="auto" src="assets/Video_CV_English.mp4"></video>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0">
 
-            <a-video src="#VideoEN" playsinline width="1.01" height="1.01" position="0 0 0"></a-video>
+            <a-video src="#VideoEN" playsinline autoplay width="1.01" height="1.01" position="0 0 0"></a-video>
               
         </a-entity>
     </a-scene>
