--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <a-entity mindar-image-target="targetIndex: 0">
 
-            <a-video src="#VideoEN" width="1.01" height="1.01" position="0 0 0"></a-video>
+            <a-video autoplay="true" loop="false" preload="auto" src="assets/Video_CV_English.mp4" width="1.01" height="1.01" position="0 0 0"></a-video>
               
         </a-entity>
     </a-scene>
