--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       
           
               <script>
-              $(document).ready(function () {
+                window.ready(function () {
                 var v = document.querySelector('#vid');
                 v.play();
               });
