--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a-video src="#VideoEN" width="1.01" height="1.01" position="0 0 0"></a-video>
           
             <script>
-                document.getElementById('vid').play();
+                document.getElementById('VideoEN').play();
             </script>
               
         </a-entity>
